--- a/src/components/pages/TabelaDespesas.css
+++ b/src/components/pages/TabelaDespesas.css
@@ -18,4 +18,14 @@
     padding: 8px;
     text-align: left;
   }
+
+  .btn-salvar{
+    width: 182px;
+  }
+
+  .btn-cadastro{
+    display: flex;
+    justify-content: space-around;
+    padding-bottom: 20px;
+  }
   
