--- a/src/components/template/EditButton.css
+++ b/src/components/template/EditButton.css
@@ -1,4 +1,4 @@
-.btn-edit.btn.btn-primary{
+.edit-button.btn.btn-primary{
     --bs-btn-border-color:none;
     --bs-btn-bg:none; 
     --bs-btn-color:none; 
