--- a/src/components/template/Footer.css
+++ b/src/components/template/Footer.css
@@ -5,5 +5,6 @@ footer.footer {
     padding: 0 25px;
     background-color: #fff;
     box-shadow: var(--shadow);
-    margin-top: 100px;
+    margin-top: 0px;
+    margin-bottom: 50px;
 }
