:sparkles: adiciona modal para cadastrar nova despesa e corrigi total de items da tabela

--- a/src/components/template/Logo.css
+++ b/src/components/template/Logo.css
@@ -4,9 +4,13 @@ aside.logo {
     justify-content: center;
     align-items: center;
 }
+a.logo{
+    display: flex;
+    justify-content: center;
+}
 
 aside.logo img {
     padding: 0 15px;
-    width: 100%;
+    width: 50%;
 }
 
