--- a/src/components/pages/Cadastro.css
+++ b/src/components/pages/Cadastro.css
@@ -1,7 +1,9 @@
 form {
-  display: flex;
+  /* display: flex;
   flex-direction: column;
-  align-items: center;
+  align-items: center; */
+  display: grid;
+  justify-content: center;
 }
 
 label {
@@ -25,7 +27,7 @@ select:focus {
   border-color: #0077ff;
 }
 
-button[type="submit"] {
+/* button[type="submit"] {
   background-color: #0077ff;
   color: #fff;
   border: none;
@@ -33,11 +35,11 @@ button[type="submit"] {
   padding: 0.5rem 1rem;
   font-size: 1rem;
   cursor: pointer;
-}
+} */
 
-button[type="submit"]:hover {
-  background-color: #005ae6;
-}
+/* button[type="submit"]:hover {
+  background-color: #7c9fd6;
+} */
 
 p {
   color: green;
@@ -46,8 +48,8 @@ p {
 
 
 .btn-salvar{
-  margin-top: 50px;
-  width: 159px;
+  /* margin-top: 50px;
+  width: 159px; */
 }
 
 .input-tipo{
@@ -69,4 +71,27 @@ button.btn-salvar {
 .div-btn{
   display: grid;
   justify-items: center;
+}
+
+.div-group{
+  margin-top: 30px;
+  display: grid;
+    justify-content: space-around;
+}
+
+.div-link-ver-tabela{
+  display: flex;
+    justify-content: center;
+    margin-top: 15px !important;
+}
+
+.div-nova-despesa{
+  display: flex;
+  justify-content: center;
+  margin-bottom: 30px;
+}
+
+main > div {
+  background-color: #fff;
+  box-shadow: none;
 }
