:sparkles: adiciona menu navbar

--- a/src/components/pages/TabelaDespesas.css
+++ b/src/components/pages/TabelaDespesas.css
@@ -72,3 +72,12 @@
   .new-record{
     margin-right: 15px;
   }
+
+  td {
+    font-weight: 300;
+    font-family: sans-serif;
+}
+
+.table-responsive {
+  height: 590px;
+}
