--- a/src/main/App.css
+++ b/src/main/App.css
@@ -38,5 +38,15 @@
 }
 
 .div-principal{
-  margin: 0px 30px 0px 30px !important;
+  margin: 25px 30px 0px 30px !important;
+}
+
+.my-navbar {
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  background-color: #f1f1f1;
+  padding: 10px;
+  text-align: center;
 }
